// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecl-link renders correctly as a default link 1`] = `
<ecl-link path="/example.html">
  <!---->
  <a class="ecl-link" href="/example.html">
    A default link
  </a>
</ecl-link>
`;

exports[`ecl-link renders correctly as a standalone link 1`] = `
<ecl-link path="/example.html" variant="standalone">
  <!---->
  <a class="ecl-link ecl-link--standalone" href="/example.html">
    A standalone link
  </a>
</ecl-link>
`;

exports[`ecl-link renders correctly when external 1`] = `
<ecl-link external="" path="/example.html" sr-external="will move you outside of this website" variant="standalone">
  <!---->
  <a class="ecl-link ecl-link--standalone" href="/example.html">
    <span class="ecl-link__label">
      Link label
    </span>
    <slot-fb name="icon-after">
      <ecl-icon class="ecl-link__icon" style-class="ecl-link__icon sc-ecl-link-ec" title-tag="will move you outside of this website">
        <span class="ecl-icon ecl-icon--xs ecl-link__icon sc-ecl-link-ec wt-icon--external wt-icon--placeholder"></span>
      </ecl-icon>
    </slot-fb>
  </a>
</ecl-link>
`;

exports[`ecl-link renders correctly with an icon after 1`] = `
<ecl-link path="/example.html" variant="standalone">
  <!---->
  <a class="ecl-link ecl-link--icon ecl-link--icon-after ecl-link--standalone" href="/example.html">
    <span class="ecl-link__label">
      Link label
    </span>
    <slot-fb hidden="" name="icon-after"></slot-fb>
    <ecl-icon class="ecl-link__icon" icon="check" slot="icon-after">
      <span class="ecl-icon ecl-icon--xs wt-icon--check wt-icon--placeholder"></span>
    </ecl-icon>
  </a>
</ecl-link>
`;

exports[`ecl-link renders correctly with an icon before 1`] = `
<ecl-link path="/example.html" theme="ec" variant="standalone">
  <!---->
  <a class="ecl-link ecl-link--icon ecl-link--icon-before ecl-link--standalone" href="/example.html">
    <ecl-icon class="ecl-link__icon" icon="arrow-left" slot="icon-before">
      <span class="ecl-icon ecl-icon--xs wt-icon--arrow-left wt-icon--placeholder"></span>
    </ecl-icon>
    <span class="ecl-link__label">
      Link label
    </span>
  </a>
</ecl-link>
`;

exports[`ecl-link renders correctly with an indicator 1`] = `
<ecl-link indicator="true" indicator-label="label for screen readers" indicator-value="5" path="/example.html" variant="standalone">
  <!---->
  <a class="ecl-link ecl-link--icon ecl-link--icon-after ecl-link--standalone" href="/example.html">
    <span class="ecl-link__label">
      Link label
    </span>
    <span class="ecl-link__icon-container">
      <ecl-icon class="ecl-link__icon" icon="check" slot="icon-after">
        <span class="ecl-icon ecl-icon--xs wt-icon--check wt-icon--placeholder"></span>
      </ecl-icon>
      <ecl-indicator sr-label="label for screen readers">
        <span class="ecl-indicator" data-ecl-auto-initialized="true" data-ecl-indicator>
          <span class="ecl-indicator__value">
            5
          </span>
          <span class="ecl-indicator__label">
            label for screen readers
          </span>
        </span>
      </ecl-indicator>
    </span>
  </a>
</ecl-link>
`;
